--- a/index.html
+++ b/index.html
@@ -24,12 +24,21 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="wrapper">
+        <h1>load more api</h1>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <section class="data-container">
+        <div class="wrapper">
+          <ul class="img-container"></ul>
+          <div class="button">
+            <a href="#FIXME" title="Button">load more</a>
+          </div>
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
